--- a/.github/workflows/main_chore-ui-poc.yml
+++ b/.github/workflows/main_chore-ui-poc.yml
@@ -61,6 +61,7 @@ jobs:
         with:
           app-name: 'chore-ui-poc'
           slot-name: 'Production'
-          package: 'dist'
+          package: './dist'
 
           
+
